Random cleanup.